<resources>
    <string name="app_name">Bus Stop Alarm</string>
    <string name="title_activity_maps">Bus Stop Alarm</string>
    <string name="dialog_title_add_stop">Add a Bus Stop?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_add">Add Stop</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">View Your Stops</string>
    <string name="add_stop_dialog_closest">At your current location</string>
    <string name="add_stop_dialog_number">By stop number</string>
    <string name="add_stop_dialog_edit_number">Stop number e.g. 130169</string>

    <string name="title_activity_view_stops_list">Bus Stops List</string>
    <string name="hello_world">Hello world!</string>
</resources>
